FIXED: scrollbar appearing on shortcuts list (Linux)

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -503,3 +503,9 @@ span.bp3-intent-warning{
 .bp3-dark span.bp3-intent-warning{
     color:#d9822b;
 }
+
+/* patch for linux/win dialogs that may show scrollbar */
+.bp3-overlay-inline .bp3-overlay-content,
+.bp3-overlay-scroll-container .bp3-overlay-content{
+    max-height:100%;
+}
